pgcenter (devel) unstable; urgency=low

  * some refactoring in connection handling code
  * add wait events profiling feature
  * lib/stat: fix wrong calculation of hits values
  * report: extend built-in help about supported statistics
  * lib/utils/postgres: use lib/pq default settings for SSL
  * report: show last processed stats file on error
  * return of the Changelog!
  * output aligning rewritten

 -- Alexey Lesovsky <lesovsky@gmail.com>  Sun, 2 Oct 2017 12:00:00 +0500

pgcenter (0.5.0) unstable; urgency=low

  * pgcenter rewritten using Golang
  * sub-commands have been implemented
  * new commands have been added: config/record/report/top
  * removed .pgcenterrc support
  * removed tabs
  * removed colors support

 -- Alexey Lesovsky <lesovsky@gmail.com>  Mon, 13 Nov 2017 11:19:00 +0500

pgcenter (0.4.0) unstable; urgency=low

  * pg_stat_database: add stats_age value based stats_reset.
  * pg-10: add pg_stat_replication lag values.
  * pg-10: add pg_stat_activity.backend_type.
  * pg-10: add support for updated pg_stat_replication (xlog -> wal).
  * change waiting connections accounting in postgres summary area.
  * make pg_stat_replication's xact_age,time_age optional, only when track_commit_timestamp is enabled.
  * use pg_roles instead of pg_authid due to https://github.com/lesovsky/pgcenter/issues/35.
  * fix wrong memory allocation for iostat/ifstat.
  * add details about prepared transactions: total, max, maxtime.
  * add xact_age,time_age to pg_stat_replication stats (available since 9.5).
  * add xlog field to pg_stat_replication stats.
  * allow to save current stat context into conninfo file (~/.pgcenterrc).
  * implement parsetr() as the fast replacement for sscanf().
  * refactoring: remove unnecessary variable from tab_s struct.
  * refactoring: remove redundant loop+case from init_tabs().
  * add system stats.
  * add handling for RHEL-specific postgres paths.
  * move the sources into src/ dir.