@@ -3,9 +3,11 @@
 package config
 
 import (
-	config "github.com/lesovsky/pgcenter/config"
-	utils "github.com/lesovsky/pgcenter/lib/utils"
+	"fmt"
+	"github.com/lesovsky/pgcenter/config"
+	"github.com/lesovsky/pgcenter/lib/utils"
 	"github.com/spf13/cobra"
+	"os"
 )
 
 var (
@@ -18,6 +20,7 @@ var CommandDefinition = &cobra.Command{
 	Short:   "configures Postgres to work with pgcenter",
 	Long:    `'pgcenter config' configures Postgres to work with pgcenter`,
 	Version: "dummy", // use constants from 'cmd' package
+	PreRun: preFlightSetup,
 	Run: func(command *cobra.Command, args []string) {
 		config.RunMain(args, conn, cfg)
 	},
@@ -30,4 +33,19 @@ func init() {
 	CommandDefinition.Flags().StringVarP(&conn.Dbname, "dbname", "d", "", "database name to connect to")
 	CommandDefinition.Flags().BoolVarP(&cfg.Install, "install", "i", false, "install stats schema into the database")
 	CommandDefinition.Flags().BoolVarP(&cfg.Uninstall, "uninstall", "u", false, "uninstall stats schema from the database")
+}
+
+// Checks passed options
+func  preFlightSetup(CommandDefinition *cobra.Command, _ []string) {
+	if !cfg.Install && !cfg.Uninstall {
+		fmt.Printf("ERROR: using '--install' or '--uninstall' options are mandatory\n")
+		_ = CommandDefinition.Help()
+		os.Exit(1)
+	}
+
+	if cfg.Install == cfg.Uninstall {
+		fmt.Printf("ERROR: can't use '--install' and '--uninstall' options together\n")
+		_ = CommandDefinition.Help()
+		os.Exit(1)
+	}
 }
